--- a/src/style.scss
+++ b/src/style.scss
@@ -1,1 +1,112 @@
-@import "./src/lib_scss/fonts.scss";
+@import "./lib_scss/fonts.scss";
+@import "./lib_scss/mixin_variables.scss";
+@import "./lib_scss/tooltip.scss";
+@import "./lib_scss/searchbar.scss";
+
+:root{
+    font-size: 100%;
+}
+
+
+//GENERAL
+body{
+    margin: 0;
+    min-height: 100vh;
+    padding: 80px 80px 40px 80px;
+    @include BoxSizing(border-box); 
+}
+
+h1{
+    margin: 0;
+}
+
+h2{
+    margin: 0;
+}
+
+h3{
+    margin: 0;
+}
+
+p{
+    margin: 0;
+}
+
+img{
+    display: block;
+}
+
+
+.hide_item{
+    visibility: hidden;
+}
+
+//LIGHT MODE
+.light_mode{
+    @include Theme();
+}
+
+header{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 100%;
+
+    img{
+        align-self: center;
+    }    
+}
+
+//button dark/light mode
+#btn_mode{
+    width: 50px;
+    height: 50px;
+    @include Appearance(none);
+    border: none;
+    background-color: transparent;
+    background-image: url("./ressources/images/btn_dark_mode_50x50.webp");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    cursor: pointer;
+}
+
+
+//TRANSITION PAGE BETWEEN LIGHT AND DARK MODE
+.transition_out{
+    opacity: 0;
+    transition: opacity 0.8s;
+}
+
+.transition_in{
+    opacity: 1;
+    transition: opacity 0.8s;
+}
+
+
+//DARK MODE
+@media (prefers-color-scheme: dark) {
+    body {
+        @include Theme($theme: $colorBgDark, $txtColor: $colorWhite);
+    }
+}
+
+.dark_mode{
+    @include Theme($theme: $colorBgDark, $txtColor: $colorWhite);
+}
+
+.dark_mode #btn_mode{
+    background-image: url("./ressources/images/btn_light_mode_50x48.webp");
+}
+
+
+@media screen and (max-width: 1140px) {
+    body{
+        padding: 30px;
+    }
+
+    #btn_mode{
+        width: 30px;
+        height: 30px;
+    }
+}
