--- a/src/lib_scss/searchbar.scss
+++ b/src/lib_scss/searchbar.scss
@@ -1,77 +1,111 @@
+$searchWidth : 425px;
 
 #search_bar {
-    // width : 425px;
     margin-top: 75px;
     margin-bottom: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
 
-    #search_form{
-        // display: flex;
-        // justify-content: center;
-        // align-items: center;
-        width: 425px;
-        position: relative;
+#search_form {
+    width: $searchWidth;
+    height: 45px;
+    position: relative;
+}
+
+#input_search {
+    width: 100%;
+    height: 45px;
+    padding: 0 20px;
+    @include BoxSizing(border-box);
+    border: 1px solid $colorBlue;
+    border-radius: 20px;
+    @include BoxShadow();
+    position: relative;
+    text-indent: 15px;
+    cursor: pointer;
+}
+
+#input_search:focus {
+    border: none;
+    outline: 1px solid $colorPink;
+}
+
+#input_search::placeholder {
+    color: $colorBLack;
+    opacity: 0.6;
+}
+
+.not_valid #input_search:invalid::placeholder {
+    color: $colorError;
+    opacity: 1;
+}
+
+#btn_erase {
+    z-index: 20;
+    width: 25px;
+    height: 25px;
+    font-weight: 700;
+    transform: translate(calc($searchWidth - (25px * 2.8)), calc(-45px + (25px / 5)));
+    background-color: transparent;
+    border: none;
+    opacity: 0.6;
+    cursor: pointer;
+}
+
+#submit {
+    z-index: 2;
+    width: 25px;
+    height: 25px;
+    transform: translate(calc($searchWidth - (25px * 2.5)), calc(-45px + (25px / 2)));
+    background-color: transparent;
+    border: none;
+    background-image: url("./ressources/images/magnifier_14x23.webp");
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+#input_search:hover{
+    border: none;
+    outline: 1px solid $colorPink
+}
+
+#btn_erase:hover,
+#submit:hover {
+    filter: invert(47%) sepia(52%) saturate(1338%) hue-rotate(299deg) brightness(96%) contrast(93%);
+}
+
+@media screen and (max-width : 500px) {
+    $searchWidth : 300px;
+
+    #search_form {
+        width: $searchWidth;
     }
 
-    input {
-        height: 45px;
-        // min-width: 425px;
-        padding: 0 20px;
-        @include BoxSizing(border-box);
-        border: 1px solid $colorBlue;
-        border-radius: 20px;
-        @include BoxShadow();
-        position: relative;
-        text-indent: 15px;
-    }
-
-    input:focus {
-        border: none;
-        outline: 1px solid $colorPink;
-    }
-
-    input::placeholder {
-        color: $colorBLack;
-        opacity: 0.6;
-    }
-
-    &.not_valid input:invalid::placeholder {
-        color: $colorError;
-        opacity: 1;
-    }
-
-    #btn_erase{
-        // z-index: 2;
-        position: absolute;
-        top:calc(50% - (25px / 2));
-        right:calc((-25px / 2));
-        width: 25px;
-        height: 25px;
-        font-weight: 700;
-        transform: translate(-80px);
-        background-color: transparent;
-        border: none;
-        opacity: 0.7;
+    #btn_erase {
+        transform: translate(calc($searchWidth - (25px * 2.5)), calc(-45px + (25px / 5)));
     }
 
     #submit {
-        z-index: 2;
-        width: 25px;
-        height: 25px;
-        transform: translate(-70px);
-        background-color: transparent;
-        border: none;
-        background-image: url("./ressources/images/magnifier_14x23.webp");
-        background-repeat: no-repeat;
+        transform: translate(calc($searchWidth - (25px * 2.3)), calc(-45px + (25px / 2)));
     }
 
-    input:hover,
-    #btn_Erase:hover,
-    #submit:hover {
-        cursor: pointer;
-        opacity: 0.8;
-    }
 }
 
+@media screen and (max-width : 350px) {
+    $searchWidth : 250px;
+
+    #search_form {
+        width: $searchWidth;
+    }
+
+    #btn_erase {
+        transform: translate(calc($searchWidth - (25px * 2.5)), calc(-45px + (25px / 5)));
+    }
+
+    #submit {
+        transform: translate(calc($searchWidth - (25px * 2.3)), calc(-45px + (25px / 2)));
+    }
+
+}
