--- a/src/style.scss
+++ b/src/style.scss
@@ -7,15 +7,16 @@
     font-size: 100%;
 }
 
-
-//GENERAL
 body{
     margin: 0;
     min-height: 100vh;
     padding: 80px 80px 40px 80px;
     @include BoxSizing(border-box); 
+    font: 16px 'Manrope', Arial, 'sans-serif';
+    font-weight: 400;
 }
 
+//GENERAL TYPOGRAPHY
 h1{
     margin: 0;
 }
@@ -36,23 +37,39 @@ img{
     display: block;
 }
 
+a{
+    text-decoration: none;
+    color: $colorBLack;
+    cursor: pointer;
+}
 
+a:hover{
+    color: $colorPink;
+    img{
+        filter: invert(47%) sepia(52%) saturate(1338%) hue-rotate(299deg) brightness(96%) contrast(93%);
+    }
+}
+
+input{
+    font-family: 'Manrope';
+    font-size: 16px;
+    font-weight: 400;
+}
+
+//GENERAL CLASSES
 .hide_item{
     visibility: hidden;
 }
 
-//LIGHT MODE
-.light_mode{
-    @include Theme();
-}
 
+//PAGE STRUCTURE
 header{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     width: 100%;
 
-    img{
+    .p_img_principale{
         align-self: center;
     }    
 }
@@ -71,6 +88,28 @@ header{
     cursor: pointer;
 }
 
+#btn_mode:hover{
+    filter: invert(45%) sepia(65%) saturate(1338%) hue-rotate(299deg) brightness(106%) contrast(133%);
+    opacity: 0.8;
+}
+
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    div{
+        display: flex;
+        align-items: center;
+        gap: 15px;
+    }
+}
+
+//LIGHT MODE
+.light_mode{
+    @include Theme();
+}
 
 //TRANSITION PAGE BETWEEN LIGHT AND DARK MODE
 .transition_out{
