--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@
 @import "./lib_scss/mixin_variables.scss";
 @import "./lib_scss/tooltip.scss";
 @import "./lib_scss/searchbar.scss";
+@import "./lib_scss/legal_mentions.scss";
 
 :root{
     font-size: 100%;
@@ -46,8 +47,15 @@ a{
 a:hover{
     color: $colorPink;
     img{
-        filter: invert(47%) sepia(52%) saturate(1338%) hue-rotate(299deg) brightness(96%) contrast(93%);
+        filter: $filterLogoHover;
+    
     }
+
+    #m_img_princiaple{
+        filter: $filterImgHover;
+    }
+
+    
 }
 
 input{
@@ -62,7 +70,7 @@ input{
 }
 
 
-//PAGE STRUCTURE
+//PAGE STRUCTURE 
 header{
     display: flex;
     flex-direction: column;
@@ -71,7 +79,7 @@ header{
 
     .p_img_principale{
         align-self: center;
-    }    
+    }      
 }
 
 //button dark/light mode
@@ -89,16 +97,14 @@ header{
 }
 
 #btn_mode:hover{
-    filter: invert(45%) sepia(65%) saturate(1338%) hue-rotate(299deg) brightness(106%) contrast(133%);
-    opacity: 0.8;
+    filter: $filterImgHover;
 }
-
 
 footer{
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    margin-top: auto;
     div{
         display: flex;
         align-items: center;
@@ -138,7 +144,30 @@ footer{
     background-image: url("./ressources/images/btn_light_mode_50x48.webp");
 }
 
+.dark_mode a{
+    color: $colorWhite;
+}
 
+.dark_mode a:hover{
+    color: $colorPink;
+    img{
+        filter: $filterLogoHover;
+    
+    }
+
+    #m_img_princiaple{
+        filter: $filterImgHover;
+    }
+}
+
+.dark_mode footer{
+    div img{
+        filter: $filterLogoDark;
+    }
+}
+
+
+//MEDIA QUERY
 @media screen and (max-width: 1140px) {
     body{
         padding: 30px;
