ci: columns list
start creating list part for tasks

--- a/src/lib_scss/mixin_variables.scss
+++ b/src/lib_scss/mixin_variables.scss
@@ -5,8 +5,8 @@ $colorYellow: #FBDC05;
 $colorOrange: #F9AE2E;
 $colorPink:#EC559D;
 $colorBlue: #00B5DE;
-$colorBLack: #000000;
-$colorWhite: #FFFFFF;
+$colorBLack: #130E0A;
+$colorWhite: #FEFEFE;
 $colorBgDark: #2C2C2C;
 $colorError: #E91139;
 $colorShadowLight : rgba(0, 0, 0, 0.25);
