--- a/src/lib_scss/list_columns.scss
+++ b/src/lib_scss/list_columns.scss
@@ -130,6 +130,30 @@
     }
 }
 
+@media screen and (max-width: 425px) {
+    #list_div{
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
 
+    .box_titles{
+        height: 40px;
+    }
 
-//TODO : REDUIRE FONT SIZE + titres UNDER 425PX 
+    .zone_tasks{
+        padding: 0 15px 15px 15px;
+    }
+
+    .btn_options {
+        font-size: 28px;
+    }
+
+    .btn_add {
+        font-size: 24px;
+        height: 40px;
+        span{
+            font-size: 16px;
+        }
+    }
+}
+
