--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,7 @@
 @import "./lib_scss/searchbar.scss";
 @import "./lib_scss/list_title.scss";
 @import "./lib_scss/list_columns.scss";
+@import "./lib_scss/menu.scss";
 @import "./lib_scss/mentionspage.scss";
 @import "./lib_scss/transition.scss";
 
@@ -18,7 +19,7 @@ body{
     min-height: 100vh;
     padding: 80px 80px 40px 80px;
     @include BoxSizing(border-box); 
-    font: 16px 'Manrope', Arial, 'sans-serif';
+    font: 16px 'Manrope', Arial, sans-serif;
     font-weight: 400;
 }
 
@@ -117,4 +118,21 @@ a:hover{
         font-size: 14px;
     }
 
+}
+
+@media screen and (max-width: 425px) {
+    h1{
+        font-size: 28px;
+    }
+
+    h2{
+        font-size: 20px;
+    }
+
+}
+
+@media screen and (max-width: 320px) {
+    body{
+        padding: 20px;
+    }
 }
