--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,7 @@
 @import "./lib_scss/list_title.scss";
 @import "./lib_scss/list_columns.scss";
 @import "./lib_scss/menu.scss";
+@import "./lib_scss/dialog.scss";
 @import "./lib_scss/mentionspage.scss";
 @import "./lib_scss/transition.scss";
 
