--- a/src/lib_scss/mixin_variables.scss
+++ b/src/lib_scss/mixin_variables.scss
@@ -18,7 +18,6 @@ $filterLogoDark : invert(100%) sepia(100%) saturate(0%) hue-rotate(207deg) brigh
     color: $txtColor;
 }
 
-
 @mixin BoxSizing($kindOfBox){
     -webkit-box-sizing: $kindOfBox;
     -moz-box-sizing: $kindOfBox;
@@ -31,12 +30,11 @@ $filterLogoDark : invert(100%) sepia(100%) saturate(0%) hue-rotate(207deg) brigh
     appearance: $howAppear;
 }
 
-
 @mixin BoxShadow($color: $colorShadowLight, $offset-x: -5px, $offset-y: 5px, $blur-radius: 5px, $spread-radius: 0){
     box-shadow: $offset-x $offset-y $blur-radius $spread-radius $color;
 }
 
-@mixin BorderBtnAdd($color: $colorShadowLight){
+@mixin BorderShadow($color: $colorShadowLight){
     border-top: solid 1px $color;
     border-right: solid 1px $color;
     border-bottom: none;
