--- a/src/style.scss
+++ b/src/style.scss
@@ -8,6 +8,7 @@
 @import "./lib_scss/list_columns.scss";
 @import "./lib_scss/menu.scss";
 @import "./lib_scss/dialog.scss";
+@import "./lib_scss/task.scss";
 @import "./lib_scss/mentionspage.scss";
 @import "./lib_scss/transition.scss";
 
