--- a/src/lib_scss/list_columns.scss
+++ b/src/lib_scss/list_columns.scss
@@ -72,8 +72,9 @@
     width:100%;
     min-height: 150px;
     max-height: 800px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin: 10px;
+    // margin-top: 15px;
+    // margin-bottom: 15px;
     overflow-y: auto;
 }
 
