--- a/src/lib_scss/list_columns.scss
+++ b/src/lib_scss/list_columns.scss
@@ -126,6 +126,10 @@
     opacity: 0.9;
 }
 
+.dark_mode .btn_options:hover {
+    color: $colorPink;
+}
+
 .dark_mode .btn_add {
     opacity: 0.9;
     @include BorderShadow($colorShadowDark);
