--- a/src/lib_scss/task.scss
+++ b/src/lib_scss/task.scss
@@ -27,6 +27,11 @@
     }
 }
 
+.task_title{
+    max-height: 40px;
+    overflow-y: auto;
+}
+
 .task_btn_options {
     font-size: 24px;
     font-weight: 700;
@@ -53,6 +58,21 @@
 .task_date,
 .task_description{
     margin-bottom: 10px
+}
+
+.task_description{
+
+    max-height: 100px;
+    margin-right: 5px;
+    overflow-y: auto;
+
+}
+
+.task_title::-webkit-scrollbar,
+.task_description::-webkit-scrollbar{
+    @include BorderShadow();
+    @include BoxShadow();
+    border-radius: 10px;
 }
 
 //DARK MODE
