ci: end of actions
actions on menu and search word

--- a/src/lib_scss/task.scss
+++ b/src/lib_scss/task.scss
@@ -75,6 +75,10 @@
     border-radius: 10px;
 }
 
+.task_hide{
+    display: none;
+}
+
 //DARK MODE
 .dark_mode .item{
     @include BorderShadow($colorShadowDark);
