--- a/src/lib_scss/searchbar.scss
+++ b/src/lib_scss/searchbar.scss
@@ -2,9 +2,16 @@ $searchWidth : 425px;
 $searchHeight : 45px;
 $logoSize : 25px;
 
-#search_bar {
+#search_div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
     margin-top: 75px;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
+}
+
+#search_bar {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -89,6 +96,11 @@ $logoSize : 25px;
 
 .item_shown{
     visibility: visible;
+}
+
+.word_not_found{
+    color: $colorError;
+
 }
 
 //DARK MODE
